MDL-72426 theme: fix message and notification count colour contrast

--- a/theme/boost/style/moodle.css
+++ b/theme/boost/style/moodle.css
@@ -18924,7 +18924,7 @@ body {
 .count-container {
   padding: 2px;
   border-radius: 2px;
-  background-color: red;
+  background-color: #ca3120;
   color: white;
   font-size: 11px;
   line-height: 11px;
@@ -19012,7 +19012,7 @@ body {
 .navbar .count-container {
   padding: 2px;
   border-radius: 2px;
-  background-color: red;
+  background-color: #ca3120;
   color: white;
   font-size: 11px;
   line-height: 11px;
