--- a/theme/classic/style/moodle.css
+++ b/theme/classic/style/moodle.css
@@ -19113,7 +19113,7 @@ body {
 .count-container {
   padding: 2px;
   border-radius: 2px;
-  background-color: red;
+  background-color: #ca3120;
   color: white;
   font-size: 11px;
   line-height: 11px;
@@ -19201,7 +19201,7 @@ body {
 .navbar .count-container {
   padding: 2px;
   border-radius: 2px;
-  background-color: red;
+  background-color: #ca3120;
   color: white;
   font-size: 11px;
   line-height: 11px;
